syntax = "proto3";

package grpc_proto;

option go_package = "/hello_grpc";

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloResponse) {}
}


message HelloRequest{
  string name = 1;
  string message = 2;
}


message HelloResponse {
  string name = 1;
  string message = 2;
}